--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="pingback" href="https://wpolive.com/elitokit/xmlrpc.php">
-	<title>Elito Kit WordPress</title>
+	<title>Freelance Video Editor</title>
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<link rel="alternate" type="application/rss+xml" title="Elito Kit WordPress » Feed" href="https://wpolive.com/elitokit/feed/">
@@ -176,11 +176,11 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/16
 				</div>
 				<div class="elementor-element elementor-element-e507e72 animated-slow elementor-widget elementor-widget-heading animated fadeInUp" data-id="e507e72" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h1 class="elementor-heading-title elementor-size-default">I am Ronald.</h1>				</div>
+					<h1 class="elementor-heading-title elementor-size-default">I am Olistar.</h1>				</div>
 				</div>
 				<div class="elementor-element elementor-element-a11aea4 animated-slow elementor-widget elementor-widget-heading animated fadeInUp" data-id="a11aea4" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h3 class="elementor-heading-title elementor-size-default">UI/UX Designer</h3>				</div>
+					<h3 class="elementor-heading-title elementor-size-default">A Freelance Video Editor</h3>				</div>
 				</div>
 				<div class="elementor-element elementor-element-8604c58 animated-slow elementor-widget elementor-widget-text-editor animated fadeInUp" data-id="8604c58" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -257,7 +257,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/16
 		<div class="elementor-element elementor-element-6aa2f56 e-con-full animated-slow e-flex e-con e-child animated fadeInUp" data-id="6aa2f56" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInUp&quot;}">
 				<div class="elementor-element elementor-element-c50a18f elementor-widget elementor-widget-heading" data-id="c50a18f" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">08</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">02</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-47cdbc4 elementor-widget elementor-widget-heading" data-id="47cdbc4" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -269,7 +269,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/16
 							<div class="elementor-counter">
 						<div class="elementor-counter-number-wrapper">
 				<span class="elementor-counter-number-prefix"></span>
-				<span class="elementor-counter-number" data-duration="2000" data-to-value="100" data-from-value="0" data-delimiter=",">100</span>
+				<span class="elementor-counter-number" data-duration="2000" data-to-value="100" data-from-value="0" data-delimiter=",">50</span>
 				<span class="elementor-counter-number-suffix">%</span>
 			</div>
 		</div>
@@ -1757,3 +1757,4 @@ var ekit_config = {"ajaxurl":"https:\/\/wpolive.com\/elitokit\/wp-admin\/admin-a
 
  
 </body></html>
+
